# l-7

./: pyproject.toml
examples/: air_travel_2024.csv  electricity_2023.csv  electricity_2024.csv  gas_2023.csv  gas_2024.csv  gasoline_2023.csv  gasoline_2024.csv  hotel_2024.csv  rail_travel_2024.csv  refrigerant_2024.csv
src/carbon_audit/: __init__.py  calculator.py  checker.py  cli.py  comparator.py  config.py  data_store.py  emission_factors.py  importers.py  models.py  reporter.py
test_project/: audit_review.txt  bad_electricity.csv  calc_detail.xlsx  check_branch.md  check_branch.xlsx  check_report.md  check_report.xlsx  full_en_test.txt  full_report_fixed.txt  full_report_q2.txt  full_report_test.txt  full_report_with_factor.txt  gas_branch_2024.csv  report_en.txt  result.xlsx  summary.txt  test_check.xlsx  test_check_branch.txt  test_en_report.txt  test_full_report.txt  test_kg_report.txt  test_org_h1_report.txt  test_summary_period.txt  test_summary_q2.txt
test_project/config/: project.yaml
test_project/data/processed/: audit_log.json  import_errors.pkl  import_log.json  records.pkl
test_project/data/raw/: README.txt
test_project/reports/: 碳盘查报告_2024.text  碳盘查报告_2024.txt
