[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-audit"
version = "1.0.0"
description = "企业碳盘查命令行工具 - 批量整理客户能耗文件，计算温室气体排放"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "PyYAML>=6.0",
    "jinja2>=3.1.0",
]

[project.scripts]
carbon-audit = "carbon_audit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
carbon_audit = ["templates/*.md", "templates/*.txt", "data/*.yaml"]
